<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GlobalCalendar</string>
    <string name="title_activity_activity_month_calendar">Global Calendar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_jumptotoday">Back To Today</string>
    <string name="action_jumptoday">Jump To Day..</string>
    <string name="action_about">About</string>
    <string name="action_submit">Submit</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>

    <string name="dateNotExisted">The date is not existed.</string>

    <string name="bottom_menu_monthview">MonthView</string>
    <string name="bottom_menu_activities">Activities</string>
    <string name="bottom_menu_post">Post</string>
    <string name="bottom_menu_settings">Profile</string>

    <string name="hint_jump_to_year">Year</string>
    <string name="hint_jump_to_month">Month</string>
    <string name="hint_jump_to_day">Day</string>
    <string name="jump_to_intro_title">Jump to...</string>
    <string name="jump_to_intro_splitor"> - </string>

    <array name="week">
        <item>Sun.</item>
        <item>Mon.</item>
        <item>Tue.</item>
        <item>Wed.</item>
        <item>Thu.</item>
        <item>Fri.</item>
        <item>Sat.</item>
    </array>

    <string name="title_activity_my">MyActivity</string>

</resources>
